# piece-wise_voting_registration

./: CMakeLists.txt  README.md  tools.cpp  tools.hpp  voting_registration_main.cpp
